crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@boolean_case_insensitive.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{{ TRUE }}\n{{ FALSE }}\n{{ TRUE == true }}\n{{ FALSE == false }}\n{{ config(enabled=TRUE) }}\n{{ config(enabled=FALSE) }}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/boolean_case_insensitive.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Const {
                    value: True,
                } @ 1:1-1:11,
            } @ 1:1-1:11,
            EmitRaw {
                raw: "\n",
            } @ 1:11-2:1,
            EmitExpr {
                expr: Const {
                    value: False,
                } @ 2:1-2:12,
            } @ 2:1-2:12,
            EmitRaw {
                raw: "\n",
            } @ 2:12-3:1,
            EmitExpr {
                expr: BinOp {
                    op: Eq,
                    left: Const {
                        value: True,
                    } @ 3:4-3:8,
                    right: Const {
                        value: True,
                    } @ 3:12-3:16,
                } @ 3:1-3:19,
            } @ 3:1-3:19,
            EmitRaw {
                raw: "\n",
            } @ 3:19-4:1,
            EmitExpr {
                expr: BinOp {
                    op: Eq,
                    left: Const {
                        value: False,
                    } @ 4:4-4:9,
                    right: Const {
                        value: False,
                    } @ 4:13-4:18,
                } @ 4:1-4:21,
            } @ 4:1-4:21,
            EmitRaw {
                raw: "\n",
            } @ 4:21-5:1,
            EmitExpr {
                expr: Call {
                    expr: Var {
                        id: "config",
                    } @ 5:4-5:10,
                    args: [
                        Kwarg(
                            "enabled",
                            Const {
                                value: True,
                            } @ 5:19-5:23,
                        ),
                    ],
                } @ 5:1-5:27,
            } @ 5:1-5:27,
            EmitRaw {
                raw: "\n",
            } @ 5:27-6:1,
            EmitExpr {
                expr: Call {
                    expr: Var {
                        id: "config",
                    } @ 6:4-6:10,
                    args: [
                        Kwarg(
                            "enabled",
                            Const {
                                value: False,
                            } @ 6:19-6:24,
                        ),
                    ],
                } @ 6:1-6:28,
            } @ 6:1-6:28,
            EmitRaw {
                raw: " ",
            } @ 6:28-6:29,
        ],
    } @ 1:1-6:29,
)
