crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_set_trailing_comma_before_filter.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% set a, b, | upper %}\n    body\n{% endset %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/err_set_trailing_comma_before_filter.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected `|`, expected identifier",
        name: "err_set_trailing_comma_before_filter.txt",
    },
)
